--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     open-in-view: true
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://postgres_db:5432/postgres
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
