--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,19 @@ services:
   api_service:
     build: .
     restart: always
-    ports:
-      - 8187:8187
+    environment:
+      - PORT=8187
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres/postgres
     depends_on:
-      - postgres_db
-    links:
-      - postgres_db:postgres
-  postgres_db:
+      - postgres
+
+  postgres:
     image: "postgres:13.3"
     restart: always
     ports:
-      - 5432:5432
+      - 5437:5432
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_PASSWORD: postgres
+     POSTGRES_USER: postgres
+     POSTGRES_DB: postgres
+     POSTGRES_PASSWORD: Ltnjxrf1
+     POSTGRES_HOST_AUTH_METHOD: trust
