--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,9 +16,9 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     open-in-view: true
   datasource:
-    url: jdbc:postgresql://postgres_db:5432/postgres
+    url: jdbc:postgresql://localhost:5437/postgres
     username: postgres
-    password: postgres
+    password: Ltnjxrf1
     driver-class-name: org.postgresql.Driver
     tomcat:
       max-active: 10
